<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings de los elementos -->
    <string name="app_name">Sistema</string>
    <string name="usuario">Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="clave">contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="reg">Registrarse</string>
    <string name="lenguaje">English</string>
    <string name="correo">Correo</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar Sesion</string>
    <string name="deuda">Nombre</string>
    <string name="monto">Monto</string>
    <string name="agregar">Agregar</string>
    <string name="add_deuda">Agregar Deuda</string>
    <string name="consultar">Consultar</string>
    <string name="cambio_lang">Cambiar Idioma</string>
    <string name="regresar">Regresar</string>
    <string name="ctrl_cuenta">Control de Cuenta</string>
    <string name="titulo">Budget Family</string>
    <string name="change_pass">Cambiar Contraseña</string>
    <string name="re_change_pass">Repetir Contraseña</string>
    <string name="actualizar">Actualizar</string>
    <string name="notmatch">Las contraseñas no coinciden</string>
    <string name="empty_user">Debe escribir un usuario</string>
    <string name="empty_pass">Debe escribir una contraseña</string>
    <string name="empty_email">Debe escribir un correo</string>
    <string name="exist_user">el usuario ya existe</string>
    <string name="not_session">Usuario o clave invalida</string>
    <string name="dialog_important">Importante!</string>
    <string name="title_activity_registro">Registro</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_activity_addgastos">Addgastos</string>
    <string name="title_activity_lista_gastos">Lista_gastos</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_control">Control</string>
    <string name="ver_deudas">Ver deudas</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="pagar">Pagar</string>

    <!-- Colores de los elementos -->
    <color name="editText">#ecf0f1</color>
    <color name="background">#3498db</color>
    <color name="login">#34495e</color>
    <color name="txtboton">#ffffff</color>
    <color name="white">#E6E3F2FD</color>
    <color name="ver">#000000</color>

    <string name="ref_deuda">Referencia de la deuda</string>
    <string name="moneda">Monto en Bs</string>
    <string name="title_activity_submenu">Submenu</string>
    <string name="tarjeta">"Agregar Tarjeta"</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="numero_tarjeta">Numero de Tarjeta</string>
    <string name="title_activity_dialogo">Dialogo</string>
    <string name="ver_tarjetas">Ver Tarjetas</string>
    <string name="tajerta_number">Numero de la tarjeta</string>
    <string name="banco">Banco</string>
    <string name="title_activity_ver_tarjetas">Ver_tarjetas</string>
    <string name="title_activity_pagar">Pagar</string>
    <string name="Efectivo">Efectivo</string>
    <string name="tarjeta_solo">Tarjeta</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Debe">Debe</string>
    <string name="Realizado_por">Felix Morales</string>
    <string name="deuda_desde">Deuda desde</string>
    <string name="title_activity_dialog_info_tarjeta">Dialog_info_tarjeta</string>

</resources>
