<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sistemas.Opciones" >

    <TextView
        android:id="@+id/tarjeta_num_pagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lang"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/cambio_lang"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/cierre_sesion"
        android:layout_width="wrap_content"
        android:onClick="salir"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="18dp"
        android:text="@string/cerrar" />

    <Button
        android:id="@+id/button2"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:onClick="atras"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_back"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lang"
        android:text="@string/regresar" />

    <Button
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cierre_sesion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:onClick="idioma"
        android:text="@string/lenguaje" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:onClick="controls"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:layout_above="@+id/tarjeta_num_pagar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:text="@string/ctrl_cuenta" />

</RelativeLayout>
