<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sistemas.Pagar" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp"
        android:background="@color/editText"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="select_tarjeta"
            android:text="@string/tarjeta_solo" />

        <Spinner
            android:id="@+id/spinner_pagar"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <RadioButton
            android:id="@+id/radio_dinero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="select_dinero"
            android:text="@string/Efectivo" />

        <EditText
            android:id="@+id/edit_pagar"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/editText" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pagar_tarjeta"
        android:layout_alignLeft="@+id/LinearLayout2"
        android:layout_below="@+id/LinearLayout2"
        android:layout_marginTop="38dp"
        android:drawableLeft="@drawable/ic_action_accept"
        android:text="@string/Aceptar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/LinearLayout2"
        android:drawableRight="@drawable/ic_action_cancel"
        android:text="@string/cancelar" />

    <TextView
        android:id="@+id/id_tarjeta_apagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LinearLayout2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:visibility="invisible" />

</RelativeLayout>
