<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sistemas.Registro" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="#ecf0f1" >

        <TextView
            android:id="@+id/tarjeta_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/user_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tarjeta_num"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_reg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/clave" />

        <EditText
            android:id="@+id/pass_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pass_reg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/correo" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_reg"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="text" />
    </RelativeLayout>

    <Button
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="41dp"
        android:text="@string/registrar"
        android:onClick="registrar" />

    <Button
        android:id="@+id/cancel"
        android:onClick="cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/registrar"
        android:layout_alignBottom="@+id/registrar"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_marginRight="35dp"
        android:text="@string/cancelar" />

</RelativeLayout>