<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sistemas.Addgastos" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white" >

        <EditText
            android:id="@+id/nombre_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tarjeta_num_pagar"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre_gasto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/monto" />

        <EditText
            android:id="@+id/monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/prioridad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/monto"
            android:layout_marginTop="42dp" />

        <Button
            android:id="@+id/agregar_deu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="21dp"
            android:background="#9966BB6A"
            android:onClick="deuda"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            
            android:textSize="30sp"
            android:background="#99F44336"
            android:padding="10dp"
            android:onClick="atras"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/agregar_deu"
            android:layout_toRightOf="@+id/textView2"
            android:text="@string/cancelar" />

        <TextView
            android:id="@+id/tarjeta_num_pagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:layout_toLeftOf="@+id/edit"
            android:text="@string/deuda" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_deuda"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</RelativeLayout>