<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sistemas.Control" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/background"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_pass"
            android:ems="10"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_change_pass"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/re_change"
            android:layout_width="match_parent"
            android:hint="@string/re_change_pass"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_marginRight="20dp"
                android:onClick="update"
                android:drawableLeft="@drawable/ic_action_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizar" />

            <Button
                android:id="@+id/button2"
                android:drawableLeft="@drawable/ic_action_back"
                android:onClick="atras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
