<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <TextView
            android:id="@+id/id_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/nombre_banco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/banco_pagar_tarjeta"
            android:text="@string/banco" />

        <TextView
            android:id="@+id/tarjeta_num_pagar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView2"
            android:text="aaaaa"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/banco_pagar_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre_banco"
            android:layout_toRightOf="@+id/id_tarjeta"
            android:padding="15dp"
            android:text="hola"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/banco_pagar_tarjeta"
            android:layout_alignParentRight="true"
            android:text="@string/tajerta_number" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/banco_pagar_tarjeta"
            android:text="@string/Debe"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/deuda_en_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>